--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca:400">
   
   <title>Frontend Mentor | Stats preview card component</title>
 
